--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,1 +1,1 @@
-{ "greeting": "Hi, I'm", "name": "Ewerton" }
+{"about":"About me","caption":"I'm a UX/UI Designer and Full-stack Developer","greeting":"Nice to meet you","hello":"Hi, I'm","touch":"Get in touch","works":"Meet my works."}
