--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -1,8 +1,1 @@
-{
-    "about": "About me",
-    "caption": "I'm a UX/UI Designer and Full-stack Developer",
-    "greeting": "Nice to meet you",
-    "hello": "Hi, I'm",
-    "touch": "Get in touch",
-    "works": "Meet my works."
-}
+{"about":"About me","hello":"Hi, I'm","touch":"Get in touch","works":"Meet my works.","caption":"I'm a UX/UI Designer and Full-stack Developer","greeting":"Nice to meet you"}
