--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -1,1 +1,8 @@
-{"about":"About me","hello":"Hi, I'm","touch":"Get in touch","works":"Meet my works.","caption":"I'm a UX/UI Designer and Full-stack Developer","greeting":"Nice to meet you"}
+{
+    "about": "About me",
+    "caption": "Full-stack Developer and UX/UI Designer",
+    "greeting": "Nice to meet you",
+    "hello": "Hi, I'm",
+    "touch": "Get in touch",
+    "works": "Meet my works."
+}
