--- a/public/locales/pt-BR/common.json
+++ b/public/locales/pt-BR/common.json
@@ -1,1 +1,8 @@
-{"about":"Sobre mim","caption":"Devolvedor Full-stack e Designer UX/UI","greeting":"Prazer em conhecê-lo","hello":"Olá, sou","touch":"Contatos","works":"Conheça meus trabalhos."}
+{
+    "about": "Sobre mim",
+    "caption": "Devolvedor Full-stack e Designer UX/UI",
+    "greeting": "Prazer em conhecê-lo",
+    "hello": "Olá, sou",
+    "touch": "Contatos",
+    "works": "Conheça meus trabalhos."
+}
