--- a/public/locales/pt-BR/home.json
+++ b/public/locales/pt-BR/home.json
@@ -1,1 +1,1 @@
-{"about":"Sobre mim","caption":"Devolvedor Full-stack e Designer UX/UI","greeting":"Prazer em conhecê-lo","hello":"Olá, sou","touch":"Contatos","works":"Conheça meus trabalhos."}
+{"about":"Sobre mim","caption":"Devolvedor Full-stack e Designer UX/UI.","description":"Olá, sou Ewerton Devolvedor Full-stack e Designer UX/UI.","greeting":"Prazer em conhecê-lo","hello":"Olá, sou","touch":"Contatos","works":"Conheça meus trabalhos."}
