--- a/public/locales/en-US/home.json
+++ b/public/locales/en-US/home.json
@@ -1,9 +1,1 @@
-{
-	"about": "About me",
-	"caption": "Full-stack Developer and UX/UI Designer.",
-	"description": "Hi, I'm Ewerton Full-stack Developer and UX/UI Designer.",
-	"greeting": "Nice to meet you",
-	"hello": "Hi, I'm",
-	"touch": "Get in touch",
-	"works": "Meet my works."
-}
+{"about":"About me","caption":"Software Engineer and UX/UI Designer.","description":"Hi, I'm Ewerton Software Engineer and UX/UI Designer.","greeting":"Nice to meet you","hello":"Hi, I'm","touch":"Get in touch","works":"Meet my works."}
