--- a/public/locales/pt-BR/home.json
+++ b/public/locales/pt-BR/home.json
@@ -1,1 +1,1 @@
-{"about":"Sobre mim","caption":"Engenheiro de Software e Designer UX/UI.","description":"Olá, sou Ewerton Engenheiro de Software e Designer UX/UI.","greeting":"Prazer em conhecê-lo","hello":"Olá, sou","touch":"Contatos","works":"Conheça meus trabalhos."}
+{"about":"Sobre mim","caption":"Engenheiro de Software e UX/UI Designer.","description":"Olá, sou Ewerton Engenheiro de Software e UX/UI Designer.","greeting":"Prazer em conhecê-lo","hello":"Olá, sou","touch":"Contatos","works":"Conheça meus trabalhos."}
