--- a/public/locales/pt-BR/common.json
+++ b/public/locales/pt-BR/common.json
@@ -1,1 +1,9 @@
-{}
+{
+	"about": "Sobre mim",
+	"caption": "Engenheiro de Software e UX/UI Designer.",
+	"description": "Olá, sou Ewerton Engenheiro de Software e UX/UI Designer.",
+	"greeting": "Prazer em conhecê-lo",
+	"hello": "Olá, sou",
+	"touch": "Contatos",
+	"works": "Conheça meus trabalhos."
+}
